# cliagent

./: .gitignore
.github/Workflows/: publish.yml
.github/workflows/: publish.yml
codeguard/: README.md  install.sh  pyproject.toml  requirements.txt
codeguard/docs/: index.html  install.cmd
codeguard/src/: agent.py  cli.py  config.py  git_manager.py  license_checker.py  reporter.py  reviewer.py  token_limiter.py
