[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguard-ai"
version = "0.2.3"  # Bump to 0.2.3
dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-groq",
    "python-dotenv",
    "requests",
    "rich",
    "groq"
]

[project.scripts]
codeguard = "codeguard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["codeguard"]