[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguard-ai"
version = "0.2.5" # Bump to 0.2.5
dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-groq",
    "requests",
    "rich",
    "groq"
]

[project.scripts]
codeguard = "codeguard.cli:main"

[tool.setuptools]
# This tells setuptools: "There is a package called 'codeguard', and its code is in the 'src' folder"
package-dir = {"codeguard" = "src"}
packages = ["codeguard"]